--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ clap = { version = "4.5.29", features = ["cargo", "derive"] }
 env_logger = "0.11.6"
 lazy_static = "1.5.0"
 log = "0.4.25"
+rand = "0.9.0"
 rust-embed = { version = "8.5.0", features = ["include-exclude", "interpolate-folder-path"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
