--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ anyhow = "1.0.95"
 async-channel = "2.3.1"
 byteorder = "1.5.0"
 chrono = { version = "0.4.39", features = ["serde"] }
-clap = { version = "4.5.29", features = ["cargo", "derive"] }
+clap = { version = "4.5.29", features = ["cargo", "derive", "string"] }
 env_logger = "0.11.6"
 lazy_static = "1.5.0"
 log = "0.4.25"
